lib/milk_tea/core/parser/declarations.rb
# frozen_string_literal: true

module MilkTea
  module Parse
    module Declarations
      def parse_import
        line = previous.line
        path = parse_qualified_name
        local_name = path.parts.last
        local_column = previous.column
        alias_name = if match(:as)
                       alias_token = consume_name("expected import alias")
                       local_name = alias_token.lexeme
                       local_column = alias_token.column
                       alias_token.lexeme
                     end
        consume_end_of_statement
        AST::Import.new(path:, alias_name:, line:, column: local_column, length: local_name.length)
      end

      DECL_KIND = {
        var:        { method: :parse_var_decl,        reject_attrs: "var" },
        type:       { method: :parse_type_alias_decl, reject_attrs: "type" },
        union:      { method: :parse_union_decl },
        enum:       { method: :parse_enum_decl,       enum_class: AST::EnumDecl },
        flags:      { method: :parse_enum_decl,       enum_class: AST::FlagsDecl },
        opaque:     { method: :parse_opaque_decl,     reject_attrs: "opaque" },
        interface:  { method: :parse_interface_decl,  reject_attrs: "interface" },
        event:      { method: :parse_event_decl },
        attribute:  { method: :parse_attribute_decl,  reject_attrs: "attribute" },
      }.freeze

      def dispatch_decl_kind(kind, visibility:, attributes:)
        info = DECL_KIND.fetch(kind)
        reject_attributes!(attributes, info[:reject_attrs]) if info[:reject_attrs]

        if info[:enum_class]
          send(info[:method], info[:enum_class], visibility:, attributes:)
        elsif info[:reject_attrs]
          send(info[:method], visibility:)
        else
          send(info[:method], visibility:, attributes:)
        end
      end

      def parse_const_or_function_decl(visibility:, attributes:)
        if match(:function)
          parse_function_def(visibility:, const: true, attributes:)
        else
          parse_const_decl(visibility:, attributes:)
        end
      end

      def parse_declaration
        attributes = parse_attribute_applications
        visibility, visibility_token = parse_visibility

        if builtin_attribute_identifier?(peek)
          raise error(peek, "layout modifiers must use attributes like @[packed] or @[align(...)]")
        elsif match(:attribute)
          dispatch_decl_kind(:attribute, visibility:, attributes:)
        elsif match(:const)
          parse_const_or_function_decl(visibility:, attributes:)
        elsif match(:var)
          dispatch_decl_kind(:var, visibility:, attributes:)
        elsif match(:event)
          dispatch_decl_kind(:event, visibility:, attributes:)
        elsif match(:type)
          dispatch_decl_kind(:type, visibility:, attributes:)
        elsif match(:struct)
          parse_struct_decl(visibility:, attributes:)
        elsif match(:union)
          dispatch_decl_kind(:union, visibility:, attributes:)
        elsif match(:enum)
          dispatch_decl_kind(:enum, visibility:, attributes:)
        elsif match(:flags)
          dispatch_decl_kind(:flags, visibility:, attributes:)
        elsif match(:variant)
          parse_variant_decl(visibility:, attributes:)
        elsif match(:interface)
          dispatch_decl_kind(:interface, visibility:, attributes:)
        elsif match(:opaque)
          dispatch_decl_kind(:opaque, visibility:, attributes:)
        elsif match(:extending)
          reject_attributes!(attributes, "extending")
          raise error(visibility_token, "public is not allowed on extending blocks") if visibility == :public

          parse_extending_block
        elsif check(:editable) || check(:static)
          reject_attributes!(attributes, "standalone method")
          raise error(peek, "#{peek.lexeme} function is only allowed inside extending blocks")
        elsif match(:foreign)
          parse_foreign_decl(visibility:, attributes:)
        elsif match(:async)
          consume(:function, "expected function after async")
          parse_function_def(visibility:, async: true, attributes:)
        elsif match(:function)
          parse_function_def(visibility:, attributes:)
        elsif match(:external)
          raise error(visibility_token, "public is not allowed on external declarations") if visibility == :public

          parse_extern_decl(attributes:)
        elsif match(:static_assert)
          reject_attributes!(attributes, "static_assert")
          raise error(visibility_token, "public is not allowed on static_assert") if visibility == :public

          parse_static_assert
        elsif check_when_start?
          reject_attributes!(attributes, "when")
          raise error(visibility_token, "public is not allowed on when") if visibility == :public

          advance
          parse_when_decl
        else
          message = visibility == :public ? "expected exportable declaration after public" : "expected declaration"
          raise error(peek, message)
        end
      end

      def parse_raw_module_body(errors: nil)
        imports = []
        directives = []
        declarations = []

        while match(:import)
          if errors
            begin
              imports << parse_import
            rescue ParseError => e
              errors << e
              synchronize_to_top_level_boundary
            end
          else
            imports << parse_import
          end
          skip_newlines
        end

        while raw_module_directive_start?
          if errors
            begin
              directives << parse_raw_module_directive
            rescue ParseError => e
              errors << e
              synchronize_to_top_level_boundary
            end
          else
            directives << parse_raw_module_directive
          end
          skip_newlines
        end

        until eof?
          if errors
            begin
              declarations << parse_raw_module_declaration
            rescue ParseError => e
              errors << e
              synchronize_to_top_level_boundary
            end
          else
            declarations << parse_raw_module_declaration
          end
          skip_newlines
        end

        [imports, directives, declarations]
      end

      def raw_module_directive_start?
        check(:link) || check(:include) || check(:compiler_flag)
      end

      def parse_raw_module_directive
        if match(:link)
          parse_link_directive
        elsif match(:include)
          parse_include_directive
        elsif match(:compiler_flag)
          parse_compiler_flag_directive
        else
          raise error(peek, "expected external directive")
        end
      end

      def parse_link_directive
        value = consume(:string, "expected string literal after link").literal
        consume_end_of_statement
        AST::LinkDirective.new(value:)
      end

      def parse_include_directive
        value = consume(:string, "expected string literal after include").literal
        consume_end_of_statement
        AST::IncludeDirective.new(value:)
      end

      def parse_compiler_flag_directive
        value = consume(:string, "expected string literal after compiler_flag").literal
        consume_end_of_statement
        AST::CompilerFlagDirective.new(value:)
      end

      def parse_raw_module_declaration
        attributes = parse_attribute_applications
